Fixed spacing hamburger

--- a/src/sass/components/_components.hamburger-menu.scss
+++ b/src/sass/components/_components.hamburger-menu.scss
@@ -7,6 +7,7 @@
     @include inuit-rem(height,
     30px);
     cursor: pointer;
+    margin-right: $inuit-global-spacing-unit;
     @media screen and (min-width: 1320px) {
         display: none;
     }
